Starting May 1st, 2016, GitHub Pages will only support Kramdown, Jekyll's default Markdown engine. If you are currently using Rdiscount or Redcarpet we've enabled Kramdown's GitHub-flavored Markdown support by default, meaning Kramdown should have all the features of the two deprecated Markdown engines, so the transition should be as simple as updating the Markdown setting to kramdown in your site's configuration (or removing it entirely) over the course of the next three months.

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "http://www.itunescn.com"
 
 paginate: 40
 
-markdown: rdiscount
+markdown: kramdown
 permalink: pretty
 pygments: true
 Exclude: ['./exclude']
